--- a/FKD/pag1.html
+++ b/FKD/pag1.html
@@ -9,9 +9,9 @@
 <body>
     <script> src="https://cdn.tailwindcss.com" </script>
     <div class="container">
-        <h1 class="text-center" "">Aranami</h1>
-        <h2 class="text-center" "">荒波</h2>
-        <h3 class="text-center" "">Streetwear</h3>
+        <h1 class="text-center" >Aranami</h1>
+        <h2 class="text-center" >荒波</h2>
+        <h3 class="text-center" >Streetwear</h3>
 
         <div class="card">
             <h4>Brands</h4>
@@ -23,4 +23,5 @@
         </div>
     </div>
 </body>
+
 </html>
